--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- <div class="pipe pipeUp"></div>
         <div class="pipe pipeDown"></div> -->
     </div>
+    <div class="tips">
+        按enter键进行开始或结束，空格键进行跳跃
+    </div>
 
     <script src="js/Rectangle.js"></script>
     <script src="js/Sky.js"></script>
